--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "psr-4": { "MathPHP\\": "src/" }
   },
   "require-dev": {
-      "phpunit/phpunit": "7.*",
+      "phpunit/phpunit": ">=6.0",
       "php-coveralls/php-coveralls": "^2.0",
       "squizlabs/php_codesniffer": "3.*",
       "phpstan/phpstan": "*",
