--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
     "psr-4": { "MathPHP\\": "src/" }
   },
   "require-dev": {
+      "ext-bcmath": "*",
+      "ext-gmp": "*",
       "phpunit/phpunit": ">=6.0 <8.0",
       "php-coveralls/php-coveralls": "^2.0",
       "squizlabs/php_codesniffer": "3.*",
